--- a/material.old/deep_learning/template_multi_numeric_sequence_data_multi_prediction.ipynb
+++ b/material.old/deep_learning/template_multi_numeric_sequence_data_multi_prediction.ipynb
@@ -355,7 +355,7 @@
         "model.add(Input(input_shape))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -486,7 +486,7 @@
         "model.add(LSTM(128))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -602,7 +602,7 @@
         "model.add(GRU(128))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -718,7 +718,7 @@
         "model.add(Bidirectional(LSTM(128)))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -835,7 +835,7 @@
         "model.add(Bidirectional(GRU(128)))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -953,7 +953,7 @@
         "model.add(LSTM(128))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -1077,7 +1077,7 @@
         "model.add(MaxPooling1D())\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
@@ -1208,7 +1208,7 @@
         "model.add(LSTM(128))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(10, activation=\"relu\"))\n",
-        "model.add(Dense(2))\n",
+        "model.add(Dense(2, activation="softmax"))\n",
         "model.compile(loss=\"mse\", optimizer=\"adam\", metrics=[\"mape\"])\n",
         "model.summary()\n",
         "\n",
